# docs/swagger.json
@@ -481,6 +481,46 @@
                 }
             }
         },
+        "/api/users/{user_id}/collaborations": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "collaborations"
+                ],
+                "summary": "Create user collaboration",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Collaboration data",
+                        "name": "collaboration",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/CreateUserCollaboration"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Collaboration"
+                        }
+                    }
+                }
+            }
+        },
         "/api/users/{user_id}/hide": {
             "post": {
                 "consumes": [
@@ -512,6 +552,25 @@
                     "users"
                 ],
                 "summary": "Publish user",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    }
+                }
+            }
+        },
+        "/api/users/{user_id}/show": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Show user",
                 "responses": {
                     "204": {
                         "description": "No Content"
@@ -653,7 +712,6 @@
         "CreateCollaboration": {
             "type": "object",
             "required": [
-                "city",
                 "country",
                 "country_code",
                 "description",
@@ -668,8 +726,7 @@
                     }
                 },
                 "city": {
-                    "type": "string",
-                    "maxLength": 255
+                    "type": "string"
                 },
                 "country": {
                     "type": "string",
@@ -692,6 +749,25 @@
                 "title": {
                     "type": "string",
                     "maxLength": 255
+                }
+            }
+        },
+        "CreateUserCollaboration": {
+            "type": "object",
+            "required": [
+                "requester_id",
+                "user_id"
+            ],
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "maxLength": 1000
+                },
+                "requester_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -810,6 +886,9 @@
                 "followers_count": {
                     "type": "integer"
                 },
+                "hidden_at": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -819,8 +898,8 @@
                 "last_name": {
                     "type": "string"
                 },
-                "notifications": {
-                    "type": "boolean"
+                "notifications_enabled_at": {
+                    "type": "string"
                 },
                 "opportunities": {
                     "type": "array",
